--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js"   // Use this on Render
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -21,8 +20,5 @@
     "nodemailer": "^7.0.12",
     "pdf-parse": "^1.1.4",
     "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.11"
   }
 }
