--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js"   // Use this on Render
+    "start": "node src/server.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
